Fixed some overlap in menu on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -90,7 +90,7 @@ a {
         left: 0;
         background-color: #fff;
         width: 100%;
-        height: 100vh;
+        height: calc(100vh - 64px);
         z-index: 3;
         overflow: auto;
         -webkit-overflow-scrolling: touch;
